# UnbalancedCV

./: .gitignore  README.md  example_repeated_cv_stats.tsv  example_repeated_prcauc_cv_stats.csv  example_repeated_rocauc_cv_stats.csv  example_subsampled_multiple_rocauc_stats.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: breast_cancer.md  np1.md  oasis3.md  simulations.md  theory.md
notebooks/: README.qmd  breast_cancer.qmd  example.py  example_repeated.py  example_subsampled.py  examples.ipynb  np1.qmd  oasis3.qmd  playground.ipynb  simpleExamples.ipynb  simple_example.py  simulation_real-case.py  simulation_real_difference.py  simulation_theoretical_difference.py  simulation_theoretical_difference_auc.py  simulation_theoretical_difference_precision_recall.py  simulation_true.py  simulations.ipynb  simulations.qmd  theory.qmd
results/: simulations.html
src/: cv.py  experiments.py  metrics.py  simulation.py  simulations.py
tests/: test_cv.py  test_metrics.py  test_simulations.py
