[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["RDoerfel <doerfelruben@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
scikit-learn = "^1.6.1"
quarto = "^0.1.0"
matplotlib = "^3.10.1"
pytest = "^8.3.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
